--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <h1>Counter App</h1>
     <h2 id="count-el">0</h2>
     <button id="increment-btn" onclick="increment()">INCREMENT</button>
-    <button id="decrement-btn" onclick="decrement()">DECREMENT</button>
+    <button id="decrement-btn" onclick="decrement()">DECREMENT</button><br>
     <button id="reset-btn" onclick="reset()">RESET</button>
     <button id="save-btn" onclick="save()">SAVE</button>
     <p id="save-el">Previous Entries: </p>
+    </div>
+    <div class="footer">
+        <p>Designed by Gobinda Adhikari <br>Copyright &copy; 2022 <br> All Rights Reserved</p>
     </div>
     <script src="index.js"></script>
 </body>
