--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <div class="container">
-    <h1>Counter App</h1>
-    <h2 id="count-el">0</h2>
+        <div class="count">
+            <h1>Counter App</h1><br>
+            <span id="count-el">0</span>
+        </div>
     <button id="increment-btn" onclick="increment()">INCREMENT</button>
     <button id="decrement-btn" onclick="decrement()">DECREMENT</button><br>
     <button id="reset-btn" onclick="reset()">RESET</button>
